# rust_clicker

./: .gitignore  Cargo.toml  README.md
src/: clicker.rs  gui.rs  main.rs
