[package]
name = "rust_clicker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.0"  # egui framework
rdev = { version = "0.5.0", features = ["unstable_grab"] }  # For global mouse input
rand = "0.8.5"  # For random number generation
x11 = "2.21.0"
libxdo-sys = "0.1.0"
egui = "0.26.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xtst"] }
libxdo-sys = "0.1.0"

[profile.release]
# Ensure the output binary is a Windows GUI application
windows-subsystem = "windows"